Fix chart navigation on smallest devices

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1443,7 +1443,7 @@ section .kit_menu {
       margin: 0 auto;
     }
     .kit_owner_content {
-      width: 85%;
+//  width: 85%;
     }
     .kit_owner_info {
       margin-bottom: 65px;
